<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/basic_layout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonClicked"
            android:text="@string/layout_basics_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/frame_layout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonClicked"
            android:text="@string/frame_layout_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/linear_layout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonClicked"
            android:text="@string/linear_layout_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/relative_layout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonClicked"
            android:text="@string/relative_layout_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/grid_layout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonClicked"
            android:text="@string/grid_layout_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/table_layout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonClicked"
            android:text="@string/table_layout_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton" />
    </LinearLayout>

</FrameLayout>