<?xml version="1.0" encoding="utf-8"?>
<!--RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/android_os" />
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/windows_logo"
        android:layout_centerInParent="true" />
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/apple_logo"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />
</RelativeLayout>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorUalr"
        android:padding="12dp"
        android:textColor="@android:color/white"
        android:text="Lorem" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="48dp"
        android:textSize="68sp"
        android:textColor="@android:color/white"
        android:layout_alignBaseline="@id/text01"
        android:layout_toRightOf="@id/text01"
        android:text="Lorem" />

</RelativeLayout-->

<!-- Small Form -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/from_text"
        android:textFontWeight="700"
        android:layout_marginEnd="4dp"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:text="@string/from_text"
        android:layout_width="48dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/email_text"
        android:textSize="18sp"
        android:text="@string/email_irconde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/from_text"
        android:layout_toRightOf="@id/from_text"/>
    <EditText
        android:id="@+id/to_field"
        android:hint="@string/to_field_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/from_text">
    </EditText>
    <EditText
        android:id="@+id/message_hint"
        android:hint="@string/message_field_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/to_field"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_button_label"
        android:layout_below="@id/message_hint"
        android:layout_alignParentRight="true"/>
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button_label"
        android:layout_marginEnd="12dp"
        android:layout_toLeftOf="@id/send_button"
        android:layout_alignTop="@id/send_button"/>
</RelativeLayout>
<!-- Use not suitable -->
<!--RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <ImageView
        android:padding="12dp"
        android:id="@+id/mainImageView"
        android:background="#ddd"
        android:layout_width="match_parent"
        android:src="@drawable/devices"
        android:layout_height="120dp" />
    <ImageView
        android:id="@+id/imgIcon01"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="12dp"
        android:src="@drawable/apple_logo"
        android:layout_below="@id/mainImageView" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lorem ipsum dolor sit amet"
        android:layout_alignTop="@id/imgIcon01"
        android:layout_toRightOf="@id/imgIcon01"/>

    <ImageView
        android:id="@+id/imgIcon02"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginRight="12dp"
        android:layout_alignLeft="@id/imgIcon01"
        android:src="@drawable/windows_logo"
        android:layout_below="@id/imgIcon01" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lorem ipsum dolor sit amet"
        android:layout_alignTop="@id/imgIcon02"
        android:layout_toRightOf="@id/imgIcon02"/>

</RelativeLayout-->